gui/src/pages/instance/InstanceList.css
#instance-list {
	width: 90%;
}

#instance-list-top {
	display: grid;
	grid-template-columns: minmax(0, 1fr) minmax(0, 1.75fr) minmax(0, 1fr);
}

.instance-list-section-container {
	width: 100%;
	margin-bottom: 2.6rem;
	gap: 0;
}

.instance-list-section-header {
	/* margin-left: 1.8rem; */
	justify-content: flex-start;
	width: 100%;
}

.instance-list-section-header > svg {
	margin-bottom: 0.05rem;
	margin-left: 1.3rem;
}

.instance-list-section-header > h2 {
	line-height: 0;
	font-size: 1.2rem;
}

.instance-list-section {
	display: grid;
	grid-template-columns: repeat(4, minmax(0, 1fr));
	width: 100%;
	gap: 1rem;
}

.instance-list-item-like,
.instance-list-item {
	height: 6rem;
	box-sizing: border-box;

	background-color: var(--bg2);
	border: var(--border) solid var(--bg3);
	border-radius: var(--round2);
	border-top-color: var(--bg4);
	border-left-color: var(--bg4);

	cursor: pointer;
}

.instance-list-item {
	position: relative;
	display: grid;
	grid-template-rows: 2fr 1fr;

	transition:
		background-color 0.15s,
		border-color 0.25s,
		transform var(--bubble);
}

.instance-list-item-top {
	width: 100%;
	overflow-x: auto;
}

.instance-list-item-name {
	text-wrap: nowrap;
}

.instance-list-item-bottom {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	border-top: var(--border) solid var(--bg3);

	color: var(--fg3);

	transition: border-color 0.25s;
}

.instance-list-item-bottom > div {
	text-wrap: nowrap;
	overflow-x: hidden;
}

.instance-list-item:hover {
	background-color: var(--bg3);
	border-right-color: var(--bg4);
	border-bottom-color: var(--bg4);
}

.instance-list-item.instance.selected {
	border-color: var(--instance);
	color: var(--instance);
	background-color: var(--instancebg);
}

.instance-list-item.instance.selected .instance-list-item-bottom {
	border-top-color: var(--instance);
	color: var(--instance);
}

.instance-list-item.template.selected {
	border-color: var(--template);
	color: var(--template);
	background-color: var(--templatebg);
}

.instance-list-item.template.selected .instance-list-item-bottom {
	border-top-color: var(--template);
	color: var(--template);
}

.instance-list-icon-container {
	margin-left: 0.5rem;
	width: 2.75rem;
	position: relative;
}

.instance-list-icon {
	width: 100%;
}

.instance-list-pin {
	position: absolute;
	width: 100%;
	height: 100%;
}

.instance-list-item-plugin {
	position: absolute;
	top: -0.5rem;
	right: -0.5rem;

	width: 1.5rem;
	aspect-ratio: 1;

	color: var(--plugin);
	background-color: var(--pluginbg);
	border: var(--border) solid var(--plugin);
	border-radius: var(--round2);
}

